# repo2text-py

./: .gitignore  README.md  pyproject.toml  repo2text.py  requirements.txt
src/repo2text/: __init__.py  cli.py  core.py
