[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "repo2text"
version = "1.3.0"
authors = [
    { name = "Draeician", email = "draeician@gmail.com" },
]
description = "A tool to convert GitHub repositories and documentation to text files"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "tiktoken>=0.5.1",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.2",
]

[project.scripts]
repo2text = "repo2text.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/repo2text"] 